# MnistNeuralNetwork

./: .gitignore  .gitlab-ci.yml  CMakeLists.txt  Makefile  README.md  build.sh  log_predictions.txt  mnist.sh  read_dataset_images.sh  read_dataset_labels.sh  test-commit
app/: CMakeLists.txt  input.config  main.cpp  single_image_overfitting.config  ten_images_overfitting.config
mnist-configs/: test.config
src/: CMakeLists.txt  NeuralNetwork.cpp  neural_network.cpp  read_dataset_images.cpp  read_dataset_labels.cpp  tensor.hpp
src/include/: BaseLayer.hpp  EigenDataSetLoader.hpp  FullyConnected.hpp  Initializers.hpp  Loss.hpp  NeuralNetwork.hpp  NeuralNetworkStack.hpp  Optimizers.hpp  ReLU.hpp  SoftMax.hpp  tensor.hpp
src/misc/: typedefs.h  util.h
src/mnist/: config_parser.h  convert_dataset.h  drop_batch_rank.h  evaluate_predictions.h  flatten_pixel_tensors.h  read_dataset.h
src/network/: cross_entropy_loss_layer.h  linear_layer.h  linear_layer_optimized.h  relu_layer.h  softmax.h
src/tensor/: matvec.h  tensor.h
test/: CMakeLists.txt  create_sub_dataset.cpp  read_dataset_images.cpp  read_dataset_labels.cpp  test_flatten_pixels.cpp  test_fully_connected.cpp  test_optimized_fully_connected.cpp
test/expected_results/: image_out_t10k-images-1099.txt  image_out_t10k-images-sub_5000_to_6000-558.txt  image_out_train-images-sub_0_to_10-7.txt  label_out_t10k-labels-1099.txt  label_out_train-labels-sub_0_to_10-7.txt
